RESOLVED FIXED216283
Web process crashes at WebCore::HTMLMediaElement::prepareForVideoFullscreenStandby
https://bugs.webkit.org/show_bug.cgi?id=216283
Summary Web process crashes at WebCore::HTMLMediaElement::prepareForVideoFullscreenSt...
Peng Liu
Reported 2020-09-08 13:52:10 PDT
Web process crashes at WebCore: WebCore::HTMLMediaElement::prepareForVideoFullscreenStandby
Attachments
Patch (1.29 KB, patch)
2020-09-08 13:55 PDT, Peng Liu
no flags
Patch (1.28 KB, patch)
2020-09-08 13:57 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-09-08 13:53:36 PDT
Peng Liu
Comment 2 2020-09-08 13:55:59 PDT
Peng Liu
Comment 3 2020-09-08 13:57:34 PDT
EWS
Comment 4 2020-09-08 14:40:09 PDT
Committed r266752: <https://trac.webkit.org/changeset/266752> All reviewed patches have been landed. Closing bug and clearing flags on attachment 408265 [details].
Note You need to log in before you can comment on or make changes to this bug.