Web process crashes at WebCore::HTMLMediaElement::prepareForVideoFullscreenStandby https://bugs.webkit.org/show_bug.cgi?id=216283

Reviewed by Alex Christensen.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::prepareForVideoFullscreenStandby):


Canonical link: https://commits.webkit.org/229117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266752 268f45cc-cd09-0410-ab3c-d52691b4dbfc