Source/WebCore/html/HTMLMediaElement.cpp
@@ -6054,6 +6054,9 @@ void HTMLMediaElement::exitFullscreen()
 void HTMLMediaElement::prepareForVideoFullscreenStandby()
 {
 #if ENABLE(VIDEO_PRESENTATION_MODE)
+    if (!document().page())
+        return;
+
     document().page()->chrome().client().prepareForVideoFullscreen();
 #endif
 }
